--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ a {
 
 /* Color Variables */
 :root {
-    --gold: #D4AF37;
+    --gold: #BB86FC;
     --dark: #121212;
     --darker: #0a0a0a;
     --grey: #2c2c2c;
